fix scrollbar playList

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a>img {
 
 #playlistItem {
     overflow-y: auto;
-    height: 300px;
+    height: 200px;
 }
 
 #bigLogo {
